Add homogeneous vector constants